--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 <workerType>SMALL</workerType>
 <region>us-west-1</region>
 <environment>Sandbox</environment>
-<applicationName>sap-poc</applicationName>
+<applicationName>sap-poc1</applicationName>
 <properties>
 
 <anypoint.platform.config.analytics.agent.enabled>true</anypoint.platform.config.analytics.agent.enabled>
